# aurora

./: .auroraignore.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ACCEPTANCE_TEST_REPORT.md  ADHOC_SPAWNING_VALIDATION.md  AGENTS.md  CACHE_BENCHMARKS_DELIVERABLE.md  CACHE_METRICS_DELIVERABLE.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CLAUDE (copy).md  CLAUDE.md  CODE_REVIEW_CHECKLIST.md  COMMANDS.md  DELIVERY_CHECKLIST.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  FEEDBACK_ISSUES.md  GOALS_SOAR_REFACTOR_PLAN.md  INSTALLATION_DIAGNOSIS.md  MCP_TESTING_ANALYSIS.md  MEMORY_BASELINE_REPORT.json  MEMORY_INDEXING_PERFORMANCE_REPORT.md  MEMORY_PROFILING_REPORT.md  MEMORY_SEARCH_PROFILE_REPORT.md  MIGRATION_CHECKLIST.md  Makefile  PHASE1_DELETIONS.md  PHASE1_VALIDATION_REPORT.md  PHASE1_VERIFICATION_REPORT.md  PHASE2B_PR_URL.txt  PHASE2B_VERIFICATION_COMPLETE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_QUALITY_STATUS.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_FINAL_MERGE_TASKS.md  PROFILING_QUICKREF.md  PROOF_OF_DELIVERY.md  README.md  RELEASE.md  (+81 more)
.aurora/: .indexing_metadata.json  AGENTS.md  CHANGES_SUMMARY.md  analysis-path-locality.md  memory.db-shm  memory.db.backup  policies.yaml  project.md  verification-threshold-update.md
.github/: CODEOWNERS  SECURITY_QUICK_START.md  SECURITY_SETUP.md  test-protection.txt
docs/: ARCHITECTURE.md  BM25_DOCUMENTATION_UPDATE_RECORD.md  CI-OPTIONS.md  CI_ARCHITECTURE.md  CI_MONITORING_LOG.md  CI_SWITCHOVER_PLAN.md  CLI_TESTING_GUIDE.md  CLI_TEST_RESULTS.md  CODE_INTELLIGENCE_STATUS.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_REPORT_v1.0.0-phase3.md  COMPREHENSIVE_FIX_PLAN.md  COST_TRACKING_GUIDE.md  DEVELOPMENT-WORKFLOW.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_VERIFICATION_GUIDE.md  INTERFACE_GUIDE.md  KNOWLEDGE_BASE.md  MCP_DEPRECATION.md  MCP_INTEGRATION_PLAN.md  MCP_SETUP.md  MIGRATION.md  ML_INSTALL.md  ML_MODELS.md  PERFORMANCE_QUICK_REF.md  PHASE2_CONTRACTS.md  PHASE2_MIGRATION_GUIDE.md  PHASE3_ARCHIVE_MANIFEST.md  PHASE4_MIGRATION_GUIDE.md  PHASE4_RISK_ASSESSMENT.md  PUBLISHING.md  PYPI_RELEASE_PLAN.md  README.md  ROLLBACK.md  ROOT_CAUSE_ANALYSIS_TESTING_BREAKAGE_2025.md  SAAS_FINANCIAL_MODEL_ANALYSIS.md  SEARCH_PERFORMANCE_PROFILE.md  SECURITY_AUDIT_CHECKLIST.md  (+22 more)
examples/: heartbeat_examples.py  heartbeat_monitoring.py  optimized_embedding_loading.py  profiling_workflow_example.sh
openspec/: project.md
scripts/: README.md  README_PROFILING.md  analyze_test_dependencies.py  antigen_extract.py  aurora-mcp  aurora-uninstall  benchmark_embedding_models.py  benchmark_embedding_optimization.py  benchmark_epic2_performance.py  bump-version.sh  check_performance_regression.py  classify_tests.py  compare_batch_sizes.py  friction.py  friction_analyze.py  friction_config.json  investigate_activation_variance.py  migrate_imports.py  migrate_tests.py  pre-push-checks.sh  profile_embedding_load.py  profile_indexing.py  profile_mem_search.py  profile_memory_baseline.py  profile_memory_search.py  profile_performance.py  quick-check.sh  release.sh  remove_redundant_markers.py  revert_init_imports.py  run-local-ci.sh  run_embedding_profile.sh  (+9 more)
(+1813 files in other folders)
